--- a/Shop/assets/css/base.css
+++ b/Shop/assets/css/base.css
@@ -3,7 +3,11 @@
     --black-color: #000;
     --text-color: #333;
     --primary-color: rgb(238,75,43);
-    --border-color: #dbdbdb
+    --border-color: #dbdbdb;
+
+    --header-height: 120px;
+    --navbar-height: 39px;
+    --header-search: calc(var(--header-height) - var(--navbar-height));
 }
 
 * {
@@ -46,6 +50,7 @@ html {
     height: 18px;
     width: 2px;
     background-color: #f86c5c;
+    /* background-color: black; */
     right: -9px;
     top: 0;
 }
@@ -66,6 +71,15 @@ html {
     }
     to{
         opacity: 1;
+    }
+}
+
+@keyframes growth {
+    from {
+        transform: scale(var(--growth-from));
+    }
+    to {
+        transform: scale(var(--growth-to));
     }
 }
 
