--- a/Shop/assets/css/base.css
+++ b/Shop/assets/css/base.css
@@ -8,6 +8,8 @@
     --header-height: 120px;
     --navbar-height: 39px;
     --header-search: calc(var(--header-height) - var(--navbar-height));
+
+    --star-gold-color: #ffce3e ;
 }
 
 * {
@@ -15,7 +17,7 @@
 }
 
 html {
-    /* 1rem = 10px => 1.5rem = 16px */
+    /* 1rem = 10px => 1.6rem = 16px */
     font-size: 62.5%; 
     line-height: 1.6rem;
     font-family: "Roboto", sans-serif;
@@ -35,7 +37,27 @@ html {
 
 .grid__row{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; /*khi mà hết chỗ thì item tự động xuống hàng */
+    margin-left: -5px;
+    margin-right: -5px;
+}
+
+.grid__column-2{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.6667%;
+}
+/* còn 10cols chia mỗi sp 2 col => 2 của 10 => 5sp => 20% */
+.grid__column-2-5{ /*layout /5*/
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
+
+.grid__column-10{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 83.3333%;
 }
 /* ****************** */
 
@@ -95,10 +117,12 @@ html {
     padding: 0 12px;
     outline: none;
     cursor: pointer;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     user-select: none;
+    background-color: var(--white-color);
+
 }
 
 .btn--normarl{
@@ -126,4 +150,116 @@ html {
     height: 32px;
     font-size: 1.4rem;
     padding: 0 8px;
+}
+
+/* selection */
+.select-input{
+    height: 34px;
+    min-width: 200px;
+    padding: 0 12px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+
+    
+}
+
+.select-input__label{
+    font-size: 1.4rem;
+}
+
+.select-input__icon{
+    font-size: 1.4rem;
+    color: rgb(131,131,131);
+    position: relative;
+    top: -1px;
+}
+
+.select-input:hover .select-input__list{
+    display: block;
+}
+
+.select-input__list{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: calc(100% - 7px);
+    border-radius: 2px;
+    background-color: var(--white-color);
+    padding: 8px 16px;
+    list-style: none;
+    display: none;
+    z-index: 1;
+    box-shadow: 0 1px 3px #ccc;
+}
+
+.select-input__item{
+
+}
+
+.select-input__link{
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    display: block;
+    padding: 8px 4px;
+}
+
+.select-input__link:hover{
+    color: var(--primary-color);
+}
+/* Cầu nối */
+.select-input__link::after{
+    content: "";
+    position: absolute;
+    display: block;
+    top: -5px;
+    right: 0;
+    width: 100%;
+    height: 15px;
+    /* background-color: black; */
+}
+
+
+/* pagination */
+
+.pagination{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+    list-style: none;
+}
+
+.pagination-item{
+    margin: 0 16px;
+}
+
+.pagination-item--actice .pagination-item__link{
+    color: var(--white-color);
+    background-color: var(--primary-color);
+}
+
+.pagination-item--actice .pagination-item__link:hover{
+    background-color: #ed5c3f;
+}
+
+.pagination-item__link{
+    --height: 30px;
+    display: block;
+    text-decoration: none;
+    font-size: 2rem;
+    color: #939393;
+    min-width: 40px;
+    height: var(--height);
+    text-align: center;
+    line-height: var(--height);
+    border-radius: 2px;
+}
+
+.pagination-item__icon{
+
 }
