--- a/Shop/assets/css/main.css
+++ b/Shop/assets/css/main.css
@@ -14,6 +14,8 @@
 .navbar-list{
     list-style: none;
     padding-left: 0;
+    display: flex;
+    align-items: center; /*căn giữa các thẻ li, k chênh cross axis*/
 }
 
 .navbar-item{
@@ -21,9 +23,102 @@
     position: relative;
 }
 
+.navbar-user{
+    display: flex;
+    justify-items: center ;
+    position: relative;
+    z-index: 1;
+}
+
+.navbar-user-avt{
+    width: 22px;
+    border-radius: 50%;
+    border: 1px solid rgba(0,0,0,0.1);
+}
+
+.navbar-user-name{
+    margin-left: 8px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 22px; /*Đo chiều cao block chứa nó, để căn giữa text theo chiều dọc*/
+}
+
+.navbar-user:hover .navbar-user-menu{
+    display: block;
+}
+
+/* info account block */
+
+.navbar-user-menu{
+    position: absolute;
+    padding-left: 0;
+    top: calc(100% + 5px);
+    right: 0;
+    background-color: var(--white-color);
+    width: 160px;
+    z-index: 1;
+    list-style: none;
+    border-radius: 2px;
+    box-shadow: 0 2px 10px #7b7777;
+    display: none;
+}
+
+/* Có thể viết riêng thành 1 class để dùng chung thay vì copy paste :)) */
+.navbar-user-menu::before{
+    content: "";
+    border-width: 20px 30px;
+    border-style:  solid;
+    border-color: transparent transparent var(--white-color) transparent;
+    position: absolute;
+    right: 9px;
+    top: -26px;
+}
+
+/* Chiêm thêm vào để tăng trải nghiệm ng dùng (non out hover) */
+.navbar-user-menu::after{
+    content: "";
+    position: absolute;
+    display: block;
+    top: -8px;
+    right: 0;
+    width: 54%;
+    height: 20px;
+    /* background-color: black; */
+}
+
+
+.navbar-user-item{
+}
+
+.navbar-user-item a:hover{
+    background-color: #fafafa;
+    color: rgba(30, 198, 145, 0.985);
+}
+
+.navbar-user-item a{
+    text-decoration: none;
+    display: block; /*block + padding giúp user có vùng click rộng hơn cho thẻ a*/
+    padding: 16px 18px;
+    color: rgb(76 76 76);
+    font-weight: 400;
+
+}
+
+/* fix khi hover vào thì cái border radius set ban đầu bị ghi đè */
+.navbar-user-item a:first-child{
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+.navbar-user-item a:last-child{
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+
 .navbar-item,
 .navbar-item-link{
-    display: inline-block;
+    /* display: inline-block; */ /*bỏ đi do đã dùng flex ở thẻ cha ul*/
     font-size: 1.5rem;
     color: var(--white-color);
     text-decoration: none; /*bỏ underline*/
@@ -47,9 +142,12 @@
     position: absolute;
     top: 130%;
     left: 0;
-    border-radius: 10px;
+    border-radius: 2px;
+    overflow: hidden;
     display: none;
     animation: fadeIn ease 0.5s; /**/
+    z-index: 1;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 }
 
 /* hiện qr code */
@@ -413,6 +511,11 @@
     width: 200px;
 }
 
+.header__logo-link{
+    text-decoration: none;
+    color: transparent; 
+}
+
 .header__logo-img{
     width: 150px;
     color: var(--white-color);
@@ -421,7 +524,7 @@
 .header__cart-wrap{
     position: relative;
     display: inline-block; /**/
-    padding: 12px; /**/
+    padding: 12px 12px 12px 20px; /**/
     cursor: pointer;
 }   
 
@@ -460,9 +563,21 @@
     width: 400px;
     border-radius: 2px;
     box-shadow: 0 2px 10px #ccc;
-    /* display: none; */
+    display: none;
     animation: fadeIn ease-in 0.2s;
     cursor: default;
+    z-index: 1;
+}
+
+.header__cart-list::before{
+    position: absolute;
+    top: -25px;
+    width: 50%;
+    right: 0;
+    height: 20%;
+    content: "";
+    /* background-color: blue; */
+    display: block;
 }
 
 /* have no products, show by image*/
@@ -474,6 +589,7 @@
 .header__cart-list--no-cart .header__cart-list-no-cart-msg,
 .header__cart-list--no-cart .header__cart-no-cart-img{
     display: block;
+    /* margin-left:auto đẩy đến khi nào gặp element khác */
     margin-left: auto; /*thay vì dùng margin auto để căn thì dùng này tránh ghi đè config khác*/
     margin-right: auto;
 }
@@ -585,6 +701,8 @@
     display: none;
     animation: fadeIn ease-in 0.2s;
     background-color: var(--white-color);
+    z-index: 1;
+
 }   
 
 
@@ -644,6 +762,7 @@
     border-radius: 2px;
     box-shadow: 0 0 3px #ccc;
     display: none;
+    z-index: 1;
 }
 
 .header__search-history-heading{
@@ -676,4 +795,560 @@
     color: var(--text-color);
     display: block;
 
+}
+
+/* Cart item */
+
+.header__cart-heading{
+    text-align: left;
+    margin: 8px 0 8px 12px;
+    font-size: 1.4rem;
+    color: #999;
+    font-weight: 400;
+}
+
+.header__cart-list-item{
+    padding-left: 0;
+    list-style: none;
+    /* Nếu quá nhiều hàng thì nó scroll, vh là viewport height set theo %chiều cao trình duyệt */
+    height: 50vh;
+    overflow-y: auto;
+    /*  */
+}
+
+.header__cart-item{
+    display: flex;
+    align-items: center; /*căn theo chiều dọc cross axis*/
+}
+
+.header__cart-item:hover{
+    background-color: #f8f8f8;
+}
+
+.header__cart-img{
+    width: 42px;
+    height: 42px;
+    /*  */
+    margin: 12px;
+    border: 1px solid var(--border-color);
+
+}
+
+.header__cart-item-info{
+    width: 100%;
+    margin-right: 12px;
+}
+
+.header__cart-item-head{
+    display: flex;
+    align-items: center; /*fix chênh*/
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+
+.header__cart-item-name{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--text-color);
+    margin: 0;
+
+    /* limit line */
+    line-height: 2rem;
+    max-height: 4rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+
+    flex: 1;
+    padding-right: 16px;
+    text-align: left;
+
+}
+
+.header__cart-item-price{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--primary-color);
+}
+
+.header__cart-item-multify{
+    font-size: 1rem;
+    margin: 0 4px;
+    color: #757575;
+}
+
+.header__cart-item-quantity{
+    font-size: 1.2rem;
+    color: #757575;
+}
+
+.header__cart-item-body{
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__cart-item-description{
+    font-size: 1.2rem;
+    font-weight: 300;
+    color: #757575;
+}
+
+.header__cart-item-remove{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+.header__cart-item-remove:hover{
+    color: var(--primary-color);
+}
+
+.header__cart-view{
+    float: right; /*đẩy btn sang right*/
+    margin: 0 12px 12px 0;
+}
+
+.header__cart-view:hover{
+    background-color: #f05d41 !important;
+}
+
+
+/* App container */
+.app__container{
+    background-color: #f5f5f5;
+}
+
+.app__content{
+    padding-top: 36px;
+}
+
+.category{
+    background-color: var(--white-color);
+    border-radius: 2px;
+    user-select: none;
+
+}
+
+.category__heading-icon{
+    font-size: 1.4rem;
+    margin-right: 4px;
+    position: relative;
+    top: -1px;
+}
+
+.category__heading{
+    font-size: 1.8rem;
+    color: var(--text-color);
+    padding: 12px 16px;
+    border-bottom: 1px solid rgba(0,0,0,0.05);
+    margin-top: 0; /*bỏ mặc định margin đi, để gom nhóm config cho dễ*/
+}
+
+.category-list{
+    padding: 0 0 8px 0;
+
+}
+
+.category-item{
+    list-style: none;
+}
+
+.category-item--active .category-item__link{
+    color: var(--primary-color);
+}
+
+/* mũi tên nhỏ */
+.category-item--active .category-item__link::before{
+    content: "";
+    position: absolute;
+    border: 4px solid;
+    border-color: transparent transparent transparent var(--primary-color);
+    right: calc(100% - 23px);
+    transform: translateY(50%); /*chỉnh theo trục Y*/
+}
+
+.category-item__link{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.5rem;
+    padding: 8px 28px;
+    display: block; /*thêm vào để padding top-bottom*/
+
+    /* hiệu ứng dịch pải */
+    position: relative;
+    right: 0;
+    transition: right linear 0.1s;
+
+}
+
+.category-item__link:hover{
+    right: -4px;
+    color: var(--primary-color);
+}
+
+/* Home sort + filter */
+
+.home-filter{
+    display: flex;
+    align-items: center;
+    background-color: #ededed;
+    padding: 12px 22px;
+    border-radius: 2px;
+    user-select: none;
+
+}
+
+.home-filter__label{
+    font-size: 1.4rem;
+    color: #555;
+    margin-right: 16px;
+}
+
+.home-filter__btn{
+    margin-right: 12px;
+    min-width: 90px !important;
+}
+
+.home-filter__page{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.home-filter__page-num{
+    font-size: 1.5rem;
+    color: var(--text-color);
+    margin-right: 22px;
+}
+
+.home-filter__page-current{
+    color: var(--primary-color);
+}
+
+.home-filter__page-control{
+    border-radius: 2px;
+    overflow: hidden;
+    display: flex;
+    width: 72px;
+    height: 36px;
+    /* trái/phải  trên/dưới  blur color (+ - sẽ khác nhau)*/
+    box-shadow: 0 1.5px 2px #c1c1c1;
+
+}
+
+.home-filter__page-btn{
+    flex: 1;
+    display: flex; /*để căn giữa 2 icon*/
+    background-color: #dddddd;
+    text-decoration: none;
+}
+
+.home-filter__page-btn:hover{
+    background-color: var(--white-color);
+}
+
+.home-filter__page-btn--disable{
+    background-color: #f9f9f9;
+    cursor: default;
+
+}
+
+.home-filter__page-btn--disable .home-filter__page-icon{
+    color: #ccc;
+}
+
+.home-filter__page-btn:first-child{
+    border-right: 1px solid #eee;
+}
+
+.home-filter__page-icon{
+    margin: auto; /*để căn giữa 2 icon*/
+    font-size: 1.2rem;
+    color: #555;
+    
+}
+
+
+/* product item */
+
+.home-product-item{
+    background-color: var(--white-color);
+    margin-top: 10px;
+    position: relative;
+    border-radius: 2px;
+    overflow: hidden;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+
+    /* nếu có chuyển động liên qua tới transform thì chuyển động trong vòng 0.1s với linear */
+    transition: transform linear 0.1s;
+    will-change: transform;
+
+    /* sau khi thay thẻ div => a cho product thì cần xử lý */
+    text-decoration: none;
+    display: block;
+
+    user-select: none;
+
+}
+
+.home-product-item:hover{
+    box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.05);
+    transform: translateY(-2px);
+}
+
+.home-product-item__img{
+    padding-top: 100%;
+    background-size: contain; /*xử lý ảnh quá lớn hoặc quá nhỏ*/
+}
+
+/* các thẻ h sẽ có margin mặc định */
+.home-product-item__name{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--text-color);
+    margin: 10px 10px 6px;
+    /* xử lý limit 2line ...*/
+    line-height: 1.8rem;
+    height: calc(1.8rem * 2);
+    overflow: hidden;
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    /*  */
+}
+
+.home-product-item__price{
+    display: flex;
+    align-items: baseline; /*căn 2 price không bị chênh dòng, trên cùng 1 base*/
+    flex-wrap: wrap; /*khi giá quá dài sẽ xuống dòng*/
+}
+
+.home-product-item__price-old{
+    font-size: 1.4rem;
+    margin-left: 10px;
+    color: #666;
+    text-decoration: line-through;
+}
+
+.home-product-item__price-current{
+    font-size: 1.6rem;
+    color: var(--primary-color);
+    margin-left: 10px;
+
+}   
+
+.home-product-item__action{
+    display: flex;
+    justify-content: space-between;
+    margin: 6px 10px 0;
+}
+
+.home-product-item__like{
+    font-size: 1.4rem;
+
+}
+
+.home-product-item__like--liked{
+
+}
+
+/* thêm --liked thì hiện tim đỏ, và ngược lại */
+.home-product-item__like--liked .home-product-item__like-icon-fill{
+    display: inline-block;
+}
+
+.home-product-item__like--liked .home-product-item__like-icon-empty{
+    display: none;
+}
+
+.home-product-item__like-icon-empty{
+
+}
+
+i.home-product-item__like-icon-fill{ /*tăng độ ưu tiên*/
+    color: #f63d30;
+    display: none;
+}
+
+/*  */
+.home-product-item__rating{
+    font-size: 0.9rem;
+    /* zoom, scale transform */
+    color: #d5d5d5;
+    margin: 1px 0 0 auto;
+}
+
+.home-product-item__star--gold{
+    color: var(--star-gold-color);
+}
+
+.home-product-item__sold{
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-left: 6px;
+
+}
+
+.home-product-item__location{
+    margin: 15px 10px;
+    color: rgba(0, 0, 0, .65);
+    font-size: 1.3rem;
+    line-height: 1.125rem;
+    min-height: 1em;
+    text-align: left;
+    font-weight: 400;
+    padding-bottom: 10px;
+
+
+}
+
+
+.home-product-item__favourite{
+    position: absolute;
+    top: 10px;
+    left: -4px;
+    /* để động bộ bg color và color của hình tam giác 45 độ (đậm nhạt theo màu) */
+    color: var(--primary-color);
+    background-color: currentColor;
+    /*  */
+    line-height: 1.6rem;
+    padding-right: 4px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+
+}
+/* tách ra riêng để k bị ghi đè bởi thằng color ở trên */
+.home-product-item__favourite span{
+    color: var(--white-color);
+}
+
+.home-product-item__favourite i{
+    font-size: 0.9rem;
+    margin: 0 4px 0;
+    color: var(--white-color);
+}
+
+/* làm hình tam giác hướng 45 độ */
+.home-product-item__favourite::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    border-top: 3px solid currentColor;
+    border-left: 3px solid transparent;
+    filter: brightness(60%); /*gỉảm độ sáng đi, cho nó đậm lại*/
+}
+
+.home-product-item__sale-off{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 36px;
+    height: 18px;
+    background-color: rgb(255 233 122);
+    text-align: center;
+    border-bottom-left-radius: 2px;
+
+}   
+
+.home-product-item__sale-off-percent{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    line-height: 18px;
+}
+
+
+/* pagination */
+
+.home-product__pagination{
+    margin: 50px 0 32px;
+}
+
+/* footer */
+
+.footer{
+    border-top: 4px solid var(--primary-color);
+    padding-top: 20px ;
+}
+
+.footer__heading{
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-left: 20px;
+}
+
+.footer-list{
+    /* bỏ đi padding left mặc định của thẻ ul */
+    padding-left: 0;
+    list-style: none;
+    margin-left: 20px;
+    
+}
+
+.footer-item{
+
+}
+
+.footer-item__link{
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #757575;
+    display: block;
+    padding: 4px 0;
+    display: flex;
+    align-items: center;
+}
+
+.footer-item__link:hover{
+    color: var(--primary-color);
+}
+
+.footer-item__icon{
+    font-size: 1.6rem;
+    margin: -3px 8px 0 0;
+}
+
+.footer__download{
+    display: flex;
+
+}
+
+.footer__download-qr{
+    width: 80px;
+    /* height: 80px; */
+    object-fit: contain; 
+    /**/
+}
+
+.footer__download-apps{
+    margin-left: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.footer__download-app-link{
+    text-decoration: none;
+    color: transparent;
+    
+}
+
+.footer__download-app-img{
+    height: 20px;
+}
+
+.footer__bottom{
+    background-color: #f5f5f5;
+    padding: 20px 0;
+    margin-top: 30px;
+}
+
+.footer__text{
+    margin: 0;
+    font-size: 1.4rem;
+    text-align: center;
+    color: #757575;
 }
