--- a/Responsive/grid_sample_layout/grid.css
+++ b/Responsive/grid_sample_layout/grid.css
@@ -87,7 +87,7 @@
 
 .c-7{
     flex: 0 0 58.33333%;
-    max-width: 58 .33333%;
+    max-width: 58.33333%;
 }
 
 .c-8{
@@ -142,7 +142,7 @@
 }
 
 .c-o-7{
-    margin-left: 58 .33333%;
+    margin-left: 58.33333%;
 }
 
 .c-o-8{
@@ -230,7 +230,7 @@
     
     .m-7{
         flex: 0 0 58.33333%;
-        max-width: 58 .33333%;
+        max-width: 58.33333%;
     }
     
     .m-8{
@@ -284,7 +284,7 @@
     }
 
     .m-o-7{
-        margin-left: 58 .33333%;
+        margin-left: 58.33333%;
     }
 
     .m-o-8{
@@ -316,9 +316,20 @@
         margin-right: -12px;
     }
     
+    .row.sm-gutter{
+        /* gutter */
+        margin-left: -5px;
+        margin-right: -5px;
+    }
+
     .col{
         padding-left: 12px;
         padding-right: 12px;
+    }
+
+    .row.sm-gutter .col{
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .l-0 {
@@ -327,6 +338,7 @@
     
     .l-1,
     .l-2,
+    .l-2-4
     .l-3,
     .l-4,
     .l-5,
@@ -350,6 +362,11 @@
     .l-2{
         flex: 0 0 16.66667%;
         max-width: 16.66667%;
+    }
+
+    .l-2-4{
+        flex: 0 0 20%;
+        max-width: 20%;
     }
     
     /* gộp 3 cột thành 1 cột => được 4 cột thực tế */
@@ -375,7 +392,7 @@
     
     .l-7{
         flex: 0 0 58.33333%;
-        max-width: 58 .33333%;
+        max-width: 58.33333%;
     }
     
     .l-8{
@@ -429,7 +446,7 @@
     }
 
     .l-o-7{
-        margin-left: 58 .33333%;
+        margin-left: 58.33333%;
     }
 
     .l-o-8{
@@ -464,16 +481,27 @@
     .wide{
         width: 984px;
     }
-    .wide.row{
+    .wide .row{
         /* gutter */
         margin-left: -12px;
         margin-right: -12px;
     }
 
-    .wide.col{
+    .wide .row.sm-gutter{
+        /* gutter */
+        margin-left: -5px;
+        margin-right: -5px;
+    }
+
+    .wide .col{
         /* gutter */
         padding-left: 12px;
         padding-right: 12px;
+    }
+
+    .wide .row.sm-gutter .col{
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .wide .l-0 {
@@ -482,6 +510,7 @@
     
     .wide .l-1,
     .wide .l-2,
+    .wide .l-2-4,
     .wide .l-3,
     .wide .l-4,
     .wide .l-5,
@@ -506,6 +535,11 @@
         flex: 0 0 16.66667%;
         max-width: 16.66667%;
     }
+
+    .wide .l-2-4{
+        flex: 0 0 20%;
+        max-width: 20%;
+    }
     
     .wide .l-3{ 
         flex: 0 0 25%;
@@ -529,7 +563,7 @@
     
     .wide .l-7{
         flex: 0 0 58.33333%;
-        max-width: 58 .33333%;
+        max-width: 58.33333%;
     }
     
     .wide .l-8{
@@ -583,7 +617,7 @@
     }
 
     .wide .l-o-7{
-        margin-left: 58 .33333%;
+        margin-left: 58.33333%;
     }
 
     .wide .l-o-8{
