--- a/Shop/assets/css/base.css
+++ b/Shop/assets/css/base.css
@@ -9,6 +9,8 @@
     --navbar-height: 39px;
     --header-search: calc(var(--header-height) - var(--navbar-height));
 
+    --header-sort-bar-height: 46px;
+
     --star-gold-color: #ffce3e ;
 }
 
@@ -25,7 +27,7 @@ html {
 }
 
 /* base responsive */
-.grid {
+/* .grid {
     width: 1500px;
     max-width: 100%;
     margin: 0 auto;
@@ -33,7 +35,7 @@ html {
 
 .grid__full-width{
     width: 100%;
-}
+} */
 
 .grid__row{
     display: flex;
